--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Survei Lingkungan Belajar MBS
                 </h1>
                 <p class="text-sm md:text-lg text-gray-600">
-                    Malika Islamic Boarding School
+                    SMP Malika Islamic Boarding School
                 </p>
             </div>
 
@@ -71,7 +71,7 @@
     <!-- Running Text -->
     <div class="bg-gradient-to-r from-blue-500 to-blue-600 text-white p-3 shadow-md overflow-hidden">
         <div class="animate-marquee">
-            <span class="font-semibold text-lg">Isilah dengan jujur sesuai keadaan sebenarnya. Tidak ada jawaban benar atau salah. Semua jawaban bersifat rahasia.</span>
+            <span class="font-semibold text-lg">Isilah dengan jujur sesuai keadaan sebenarnya ! Tidak ada jawaban benar atau salah dan semua jawaban bersifat rahasia, ini untuk perbaikan kita bersama.</span>
         </div>
     </div>
 
