--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 options: ["Ya, saya tahu kepada siapa", "Takut melapor", "Tidak tahu kepada siapa"]
             },
             {
-                text: "Apakah kamu pernah mengalami pelecehan atau melihat orang lain melakukan hal-hal yang membuat merasa tidak nyaman, takut, atau dipaksa (Contoh: disentuh di bagian tubuh pribadi, dipaksa melihat sesuatu, gambar/video tidak pantas, atau dipaksa melakukan sesuatu yang kamu tidak mau)?",
+                text: "Apakah kamu pernah mengalami pelecehan seksual (Contoh: disentuh di bagian tubuh kamu, dipaksa melihat gambar/video tidak pantas, atau dipaksa melakukan perbuatan aktivitas seksual yang yang kamu tidak mau) atau melihat orang lain melakukan perbuatan pencabulan yang membuat merasa tidak nyaman dan takut?",
                 options: ["Tidak pernah", "Pernah melihat", "Pernah mengalami", "Tidak ingin menjawab"]
             },
             {
