--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 options: ["Ya, saya sadar dan ingin berterima kasih kepada orang tua", "Biasa saja", "Tidak menyadari"]
             },
             {
-                text: "Apakah kamu merasa ada peningkatan akhlak, pengetahuan, disiplin dan ibadah dalam 4 bulan ini?",
+                text: "Apakah kamu merasa ada peningkatan akhlak, pengetahuan, disiplin dan ibadah dalam 5 bulan ini?",
                 options: ["Sangat meningkat", "Cukup meningkat", "Belum banyak berubah", "Justru menurun"]
             },
             {
@@ -201,7 +201,7 @@
                 options: ["Akrab", "Biasa saja", "Tidak dekat"]
             },
             {
-                text: "Apakah kamu pernah merasa kehilangan barang pribadi misalnya: pakaian, alat tulis, atau uang?",
+                text: "Apakah kamu pernah merasa kehilangan barang pribadi di MBS, misalnya: pakaian, alat tulis, atau uang?",
                 options: ["Tidak pernah", "Pernah sekali", "Beberapa kali", "Sering terjadi"]
             },
             {
@@ -229,7 +229,7 @@
                 options: ["Sangat bersih dan terjaga", "Cukup bersih", "Kurang bersih", "Kotor dan perlu perhatian"]
             },
             {
-                text: "Apakah kamu pernah melihat atau mengalami bullying (perundungan seperti diganggu, diejek, dikucilkan, atau disakiti di pondok)?",
+                text: "Apakah kamu pernah melihat atau mengalami bullying (perundungan seperti diganggu, diejek, dikucilkan, atau disakiti di MBS)?",
                 options: ["Tidak pernah", "Pernah melihat", "Pernah mengalami", "Sering terjadi di sekitar"]
             },
             {
@@ -237,7 +237,7 @@
                 options: ["Ya, saya tahu kepada siapa", "Takut melapor", "Tidak tahu kepada siapa"]
             },
             {
-                text: "Apakah kamu pernah mengalami pelecehan seksual (Contoh: disentuh di bagian tubuh kamu, dipaksa melihat gambar/video tidak pantas, atau dipaksa melakukan perbuatan aktivitas seksual yang yang kamu tidak mau) atau melihat orang lain melakukan perbuatan pencabulan yang membuat merasa tidak nyaman dan takut?",
+                text: "Di MBS, Apakah kamu pernah mengalami pelecehan seksual (Contoh: disentuh di bagian tubuh kamu, dipaksa melihat gambar/video tidak pantas, atau dipaksa melakukan perbuatan aktivitas seksual yang yang kamu tidak mau) atau melihat orang lain melakukan perbuatan pencabulan yang membuat merasa tidak nyaman dan takut?",
                 options: ["Tidak pernah", "Pernah melihat", "Pernah mengalami", "Tidak ingin menjawab"]
             },
             {
